--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytemuck = { version = "1.12.1", features = ["derive"] }
+env_logger = "0.9.1"
+log = "0.4.17"
+pollster = "0.2.5"
+wgpu = "0.13.1"
